# otus-lab2

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yaml
